Autoplay: use error instead of warning for Web Audio console message.

Bug: 807017
Change-Id: I8543c8c7a825bf39351276e74bf76ecafc947b9d